Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53799

[REG Qt 5.6 -> Qt 5.7] QtWebEngineProcessd crashes when pressing mouse's thumb button

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.2, 5.7.1
    • 5.7.0 RC
    • WebEngine
    • Windows 7 64 bit
      Microsoft Comfort Mouse 6000 for Business

      1. Run a debug build of the Quick Nano browser example (qtwebengine\examples\webengine\quicknanobrowser\quicknanobrowser.pro)
        It starts showing http://www.qt.io/
      2. Click on a link.
      3. Click the mouse's rear thumb button which is assigned to the "Back" action.
        While the browser keeps running, QtWebEngineProcessd crashes:
        1   blink::MouseEvent::create                                                                                                                                                                                                       Qt5WebEngineCored  0x14273da1 
        2   blink::EventHandler::updatePointerTargetAndDispatchEvents                                                                                                                                                                       Qt5WebEngineCored  0x1421db8e 
        3   blink::EventHandler::handleMousePressEvent                                                                                                                                                                                      Qt5WebEngineCored  0x1421326e 
        4   blink::PageWidgetEventHandler::handleMouseDown                                                                                                                                                                                  Qt5WebEngineCored  0x11e7df80 
        5   blink::WebViewImpl::handleMouseDown                                                                                                                                                                                             Qt5WebEngineCored  0x11e07f52 
        6   blink::PageWidgetDelegate::handleInputEvent                                                                                                                                                                                     Qt5WebEngineCored  0x11e7ddba 
        7   blink::WebViewImpl::handleInputEvent                                                                                                                                                                                            Qt5WebEngineCored  0x11e0736a 
        8   content::RenderWidgetInputHandler::HandleInputEvent                                                                                                                                                                             Qt5WebEngineCored  0x119999ee 
        9   content::RenderWidget::OnHandleInputEvent                                                                                                                                                                                       Qt5WebEngineCored  0x118ad873 
        10  base::DispatchToMethodImpl<content::RenderWidget,void (__thiscall content::RenderWidget:: *)(blink::WebInputEvent const *,ui::LatencyInfo const &),blink::WebInputEvent const *,ui::LatencyInfo,0,1>                            Qt5WebEngineCored  0x118a427d 
        11  base::DispatchToMethod<content::RenderWidget,void (__thiscall content::RenderWidget:: *)(blink::WebInputEvent const *,ui::LatencyInfo const &),blink::WebInputEvent const *,ui::LatencyInfo>                                    Qt5WebEngineCored  0x118a3e68 
        12  InputMsg_HandleInputEvent::Dispatch<content::RenderWidget,content::RenderWidget,void,void (__thiscall content::RenderWidget:: *)(blink::WebInputEvent const *,ui::LatencyInfo const &)>                                         Qt5WebEngineCored  0x118a39c4 
        13  content::RenderWidget::OnMessageReceived                                                                                                                                                                                        Qt5WebEngineCored  0x118addf2 
        14  content::RenderViewImpl::OnMessageReceived                                                                                                                                                                                      Qt5WebEngineCored  0x1185b871 
        15  content::MessageRouter::RouteMessage                                                                                                                                                                                            Qt5WebEngineCored  0x123b6f2b 
        16  content::ChildThreadImpl::ChildThreadMessageRouter::RouteMessage                                                                                                                                                                Qt5WebEngineCored  0x138ccd53 
        17  content::MessageRouter::OnMessageReceived                                                                                                                                                                                       Qt5WebEngineCored  0x123b6e8d 
        18  content::ChildThreadImpl::OnMessageReceived                                                                                                                                                                                     Qt5WebEngineCored  0x138cc7ed 
        19  base::internal::RunnableAdapter<bool (__thiscall content::ChildThreadImpl:: *)(IPC::Message const &)>::Run                                                                                                                      Qt5WebEngineCored  0x118d8701 
        20  base::internal::InvokeHelper<0,void,base::internal::RunnableAdapter<bool (__thiscall content::ChildThreadImpl:: *)(IPC::Message const &)>,base::internal::TypeList<content::RenderThreadImpl *,IPC::Message const &>>::MakeItSo Qt5WebEngineCored  0x118d6376 
        ... <Mehr>                                                                                                            

      QtWebEngineProcessd should not crash. A release build of the same example does not seem to cause a crash in this situation.

        1. backtrace.txt
          19 kB
          Robert Löhning
        For Gerrit Dashboard: QTBUG-53799
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes