Do not forward invalid mouse events to blink

Blink can not handle more than the three main mouse-buttons, and we were
translating a press of an extra mouse-button as a mouse-down of the
button ButtonNone.

Instead ignore mouse-button events blink does not currently support.

Task-number: QTBUG-53799
Change-Id: If1d3ba6bd331ec8ad0ff45bcd674e67763ee9097
Reviewed-by: Michael Brüning <michael.bruning@qt.io>